--- a/public/popup.css
+++ b/public/popup.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     /*font-family: 'Open Sans', sans-serif;*/
     margin: 0;
     padding: 0;
@@ -12,7 +13,7 @@ html, body {
     padding: 1rem;
 }
 
-.header > span {
+.header>span {
     font-weight: bold;
     font-style: italic;
     font-size: x-large;
